# PI_SaaS

./: .gitignore  Pipfile  README.md  data.ipynb  estoque.py  fluxo_cx.py  main.py  package-lock.json  pyproject.toml  requirements.txt  sugestoes.py  vercel.json  vite.config.js
back/: estoque.py  fluxo_cx.py  main.py  sugestoes.py
back/templates/: index.html
data/: Excaulebur.csv  Excaulebur_2024-04-04.csv  Excaulebur_2024-04-06.csv  Excaulebur_2024-04-09.csv  Excaulebur_2024-04-11.csv  Excaulebur_2024-04-16.csv  Excaulebur_2024-04-18.csv  Excaulebur_2024-04-20.csv  Totosa.csv  Totosa_2024-04-03.csv  Totosa_2024-04-05.csv  Totosa_2024-04-08.csv  Totosa_2024-04-10.csv  Totosa_2024-04-15.csv  Totosa_2024-04-17.csv
front/: index.html  main.jsx  main.module.css
front/components/: Button.jsx  Card.jsx  Img.jsx
front/components/Cards/: Card.jsx  Section.jsx
front/components/Table/: Rows.jsx  Section.jsx
front/components/Transaction/: Button.jsx  Modal.jsx  Modal.module.css  Section.jsx
front/pages/: home.jsx  home.module.css
src/: estoque.py  fluxo_cx.py  fluxo_cx_simples.py  main.py
src/templates/: index.html
static/: main-1c4636e9.css  main-2218f944.js  main-b1dea3af.js  main-df3bcfc9.css  manifest.json
templates/: index.html
