[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "fastapi-vercel"
version = "0.0.1"
description = "FastAPI project deployed on Vercel"
readme = "README.md"
requires-python = "3.12"

dependencies = [
    "pandas",
    "fastapi",
    "jinja2",
    "uvicorn"
]